tests/baselines/reference/errorLocationForInterfaceExtension.errors.txt
==== tests/cases/compiler/errorLocationForInterfaceExtension.ts (1 errors) ====
    var n = '';
    
    interface x extends string { }
                        ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    